--- a/components/footer.css
+++ b/components/footer.css
@@ -1,12 +1,5 @@
-a {
-  color: white;
-  font-size: 50px;
-  text-decoration: none;
-  margin: 16px;
-}
 
 .footer {
-  display: inline-block;
-  align-items: center;
-  justify-content: center;
+  margin-left: 38%;
+  margin-bottom: 16px;
 }
